--- a/practiceGround.html
+++ b/practiceGround.html
@@ -210,9 +210,11 @@
 
 <button id="showAnswerBtn">Ver respuesta</button>
 
+<!--Añadir lista-->
 <script src="js/hiraganaList.js"></script>
 <script src="js/katakanaList.js"></script>
 <script src="js/vocabularyBasicList.js"></script>
+<script src="./js/particleList.js"></script>
 
 <script>
 /* ---------- NAVIGATION ---------- */
@@ -229,10 +231,12 @@ const params = new URLSearchParams(location.search);
 
 const { play, exam, level: playingLevel } = Object.fromEntries(params);
 
+//AÑADIR LISTA
 const lists = {
   hiraganaList,
   katakanaList,
-  vocabularyBasicList
+  vocabularyBasicList,
+  particleList
 };
 
 let filteredQuizList = [];
