--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
 <title>Practicar Japonés</title>
 <style>
 
-  .full-height {
-  height: calc(var(--vh, 1vh) * 100);
-}
-
   * {
   outline: none;          /* Quita el borde de foco azul */
   user-select: none;      /* Opcional: evita selección de texto al hacer click */
@@ -120,6 +116,7 @@
     writing-mode: vertical-rl;
     text-orientation: upright;
     padding: 15px 0px;
+    margin-top: 5px;
   }
 
   #examToggleButton.active { border: 3px solid #cc2e2e; box-shadow: 0 3px 10px rgba(0,0,0,.15); }
@@ -180,12 +177,24 @@
     border: solid 1px gray;
     border-radius: 69px;
     margin-top: 5px;
-    margin-bottom: 5px;
     text-shadow:
       -4px -4px 8px white,
        4px -4px 8px white,
       -4px  4px 8px white,
        4px  4px 8px white;
+  }
+
+  #fullscreenToggle {
+    height: 40px;
+    width: 40px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    border: none;
+    margin-top: 5px;
+  }
 
   #categoryMenu {
     display: flex;
@@ -204,6 +213,7 @@
     <div id="webTitle">ジャパンアップ</div>
     <div id="categoryMenu"></div>
     <button id="examToggleButton">EXAMEN</button>
+    <button id="fullscreenToggle">⛶</button>
   </div>
 
 <div id="studyDiv"></div>
@@ -442,6 +452,20 @@ uniqueCategories.forEach(cat => {
 });
 
 
+  // Botón de pantalla completa
+  const fullscreenBtn = document.getElementById("fullscreenToggle");
+
+  fullscreenBtn.onclick = () => {
+    if (!document.fullscreenElement) {
+      document.documentElement.requestFullscreen().catch(err => {
+        alert(`Error al intentar entrar en pantalla completa: ${err.message}`);
+      });
+    } else {
+      document.exitFullscreen();
+    }
+  };
+
+
   window.addEventListener("beforeunload", () =>
     localStorage.setItem("lastScrollPosition", container.scrollTop)
   );
@@ -493,15 +517,6 @@ document.querySelectorAll(".level-card").forEach(card => {
   const observer = new MutationObserver(() => fitTextInCard(card));
   observer.observe(card, { childList: true, subtree: true });
 });
-
-
-//Solucion a la barra de busqueda
-function setFullHeight() {
-  document.documentElement.style.setProperty('--vh', `${window.innerHeight * 0.01}px`);
-}
-window.addEventListener('resize', setFullHeight);
-setFullHeight();
-
 
 
 </script>
