--- a/practiceGround.html
+++ b/practiceGround.html
@@ -215,6 +215,7 @@
 <script src="js/katakanaList.js"></script>
 <script src="js/vocabularyBasicList.js"></script>
 <script src="./js/particleList.js"></script>
+<script src="./js/verbConjugationList.js"></script>
 
 <script>
 /* ---------- NAVIGATION ---------- */
@@ -236,7 +237,8 @@ const lists = {
   hiraganaList,
   katakanaList,
   vocabularyBasicList,
-  particleList
+  particleList,
+  verbConjugationList
 };
 
 let filteredQuizList = [];
