--- a/index.html
+++ b/index.html
@@ -228,11 +228,11 @@
 <script src="./js/katakanaList.js"></script>
 <script src="./js/vocabularyBasicList.js"></script>
 <script src="./js/particleList.js"></script>
-<script src="./js/pruebaList1.js"></script>
+<script src="./js/verbConjugationList.js"></script>
 
 <script>
   //Añadir lista
-  const allList = [hiraganaList, katakanaList, vocabularyBasicList, particleList, pruebaList1];
+  const allList = [hiraganaList, katakanaList, vocabularyBasicList, particleList, verbConjugationList];
   const container = document.getElementById("sectionsContainer");
   const categoryMenu = document.getElementById("categoryMenu");
   const fixedBtn = document.getElementById("fixedPlayButton");
@@ -379,8 +379,10 @@
       card.style.padding = "8px 12px";
       card.style.fontSize = "15px";
       card.style.display = "flex";
-      card.style.flexDirection = "column";
-      card.style.alignItems = "center";
+      card.style.flexDirection = "row";
+      card.style.alignItems = "left";
+      card.style.gap = "10px";
+      card.style.border = "1px solid";
 
       card.innerHTML = `<span>${item.q}</span><span style="font-weight: bold;">${item.a}</span>`;
       list.appendChild(card);
