--- a/index.html
+++ b/index.html
@@ -236,10 +236,11 @@
 <script src="./js/particleList.js"></script>
 <script src="./js/verbConjugationList.js"></script>
 <script src="./js/demonstrativesList.js"></script>
+<script src="./js/numbersList.js"></script>
 
 <script>
   //Añadir lista
-  const allList = [hiraganaList, katakanaList, vocabularyBasicList, particleList, verbConjugationList, demonstrativesList];
+  const allList = [hiraganaList, katakanaList, vocabularyBasicList, particleList, verbConjugationList, demonstrativesList, numbersList];
   const container = document.getElementById("sectionsContainer");
   const categoryMenu = document.getElementById("categoryMenu");
   const fixedBtn = document.getElementById("fixedPlayButton");
