--- a/practiceGround.html
+++ b/practiceGround.html
@@ -292,6 +292,7 @@ main {
 <script src="./js/particleList.js"></script>
 <script src="./js/verbConjugationList.js"></script>
 <script src="./js/demonstrativesList.js"></script>
+<script src="./js/numbersList.js"></script>
 
 <script>
 /* ---------- SCRIPT JS ---------- */
@@ -319,7 +320,8 @@ const lists = {
     vocabularyBasicList,
     particleList,
     verbConjugationList,
-    demonstrativesList
+    demonstrativesList,
+    numbersList
 };
 
 let filteredQuizList = [];
