--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ button {
   transform: translateY(-3px);
   box-shadow: 0 6px 15px rgba(0,0,0,.12);
 }
-.level-card h3 { margin:0; font-size:14px; } /* Ajuste de fuente en JS */
+.level-card h3 { margin:0; font-size:14px;font-weight: 500 !important;} /* Ajuste de fuente en JS */
 .level-card p { margin:0; font-size:12px; color:#7f8c8d; }
 
 /* 4. Botones Flotantes y de Menú */
