--- a/index.html
+++ b/index.html
@@ -27,13 +27,9 @@ button {
 }
 /* 2. Diseño de Layout Principal */
 #studyDiv {
-  position: fixed;
   height: calc(25vh - 10px);
-  width: calc(100% - 55px);
+  width: calc(100% - 10px);
   background: #fefff3;
-  top: 0;
-  left: 0;
-  z-index: 100;
   overflow: scroll;
   display: flex;
   flex-direction: column;
@@ -43,27 +39,21 @@ button {
 }
 #studyDiv * { font-size: 20px; }
 #sectionsContainer {
+  display: flex;
+  float: left;
   width: calc(100% - 44px);
-  max-width: 960px;
-  height: calc(75vh - 120px);
-  margin-top: 25vh;
+  height: 75vh;
   overflow: scroll;
-  padding-bottom: 120px;
 }
 #verticalBar {
-  position: fixed;
-  height: 100vh;
+  height: 75vh;
   width: 44px;
-  top: 0;
-  right: 0;
   background: #fefff3;
-  border-radius: 12px;
-  box-shadow: 0 5px 19px 1px rgba(0, 0, 0, .28);
   display: flex;
-  z-index: 101;
   justify-content: center;
   flex-wrap: wrap;
   align-content: flex-start;
+  float: left;
 }
 #webTitle {
   font-size: 2vh;
@@ -176,17 +166,7 @@ button {
   border: 3px solid #cc2e2e;
   box-shadow: 0 3px 10px rgba(0,0,0,.15);
 }
-.categoryButton, #fullscreenToggle {
-  height: 40px;
-  width: 40px;
-  font-weight: 600;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 16px;
-  margin-top: 5px;
-  background: none; /* Base para botones de barra vertical */
-}
+
 .categoryButton {
   background: #17171712;
   border: solid 1px gray;
@@ -214,6 +194,11 @@ button {
 }
 /* Estilos de título de categoría */
 /* Encabezados de categoría fijos dentro del contenedor */
+
+.category-block {
+  width: 100%;
+}
+
 .category-block h2 {
   position: sticky;
   top: 0;
@@ -229,19 +214,24 @@ button {
 </style>
 </head>
 <body>
-  <div id="verticalBar">
-    <div id="webTitle">ジャパンアップ</div>
-    <div id="categoryMenu"></div>
-    <button id="examToggleButton">EXAMEN</button>
-    <button id="fullscreenToggle">⛶</button>
+
+  <div id="studyDiv"></div>
+
+
+
+
+
+  <div id="sectionsContainer"></div>
+  <div id="practiceContainer">
+    <button id="fixedPlayButton">Practicar</button>
   </div>
 
-<div id="studyDiv"></div>
+  <div id="verticalBar">
+    <div id="categoryMenu"></div>
+    <button id="examToggleButton">EXAMEN</button>
+  </div>
 
-<div id="sectionsContainer"></div>
-<div id="practiceContainer">
-  <button id="fixedPlayButton">Practicar</button>
-</div>
+
 <script src="./js/allLists.js"></script>
 <script>
 
@@ -262,7 +252,6 @@ button {
   const examBtn = $("examToggleButton");
   const studyDiv = $("studyDiv");
   const practiceContainer = $("practiceContainer");
-  const fullscreenBtn = $("fullscreenToggle");
 
   let selected = null;
   let examMode = false;
@@ -595,17 +584,6 @@ button {
         const listName = selected.dataset.listName;
         const level = selected.dataset.level;
         location.href = `practiceGround.html?play=${listName}&level=${level}`;
-      }
-    };
-
-    // Botón de pantalla completa
-    fullscreenBtn.onclick = () => {
-      if (!document.fullscreenElement) {
-        document.documentElement.requestFullscreen().catch(err => {
-          console.error(`Error al intentar entrar en pantalla completa: ${err.message}`);
-        });
-      } else {
-        document.exitFullscreen();
       }
     };
 
