--- a/index.html
+++ b/index.html
@@ -176,6 +176,19 @@ button {
     -4px  4px 8px white, 4px  4px 8px white;
 }
 
+
+.categoryButton {
+  height: 40px;
+  width: 40px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  margin-top: 5px;
+  background: none; /* Base para botones de barra vertical */
+}
+
 /* 5. Estilos de Tabla */
 .study-table {
   border-collapse: collapse;
@@ -583,7 +596,6 @@ button {
       } else if (!examMode && selected) {
         const listName = selected.dataset.listName;
         const level = selected.dataset.level;
-        location.href = `practiceGround.html?play=${listName}&level=${level}`;
       }
     };
 
