--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@ button {
 #sectionsContainer {
   display: flex;
   float: left;
-  width: calc(100% - 44px);
-  height: 75vh;
+  width: 100%;
+  height: calc(75vh - 51px); 
   overflow: scroll;
 }
-#verticalBar {
-  height: 75vh;
-  width: 44px;
+#bar {
+  height: 48px;
+  width: 100%;
   background: #fefff3;
   display: flex;
   justify-content: center;
@@ -149,15 +149,12 @@ button {
   color: white;
 }
 #examToggleButton {
-  width: 100%;
-  max-height: 25vh;
   font-weight: 600;
   color: white;
   background: #086242;
   display: flex;
   align-items: center;
   justify-content: center;
-  writing-mode: vertical-rl;
   text-orientation: upright;
   padding: 15px 0;
   margin-top: 5px;
@@ -230,18 +227,17 @@ button {
 
   <div id="studyDiv"></div>
 
-
-
-
-
   <div id="sectionsContainer"></div>
-  <div id="practiceContainer">
-    <button id="fixedPlayButton">Practicar</button>
-  </div>
 
-  <div id="verticalBar">
+  <div id="bar">
     <div id="categoryMenu"></div>
     <button id="examToggleButton">EXAMEN</button>
+  </div>
+
+
+
+  <div id="practiceContainer">
+    <button id="fixedPlayButton">Practicar</button>
   </div>
 
 
